<resources>
    <string name="app_name">MobileChallenge</string>
    <string name="genres">Genres:</string>
    <string name="popularity">Popularity:</string>
    <string name="release_date">Release Date:</string>
    <string name="languages">Languages:</string>
    <string name="vote_average">Vote Average:</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="most_popular">Most Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="add_to_favorites"> Add to favorites / Remove</string>
    <string name="now_playing_toolbar">Now Playing Movies</string>
    <string name="favorites_toolbar">Favorites Movies</string>
    <string name="filter_by_name_toolbar">Filter by Name</string>
    <string name="most_popular_toolbar">Most Popular Movies</string>
    <string name="no_favorites_available">No Favorites Available</string>
    <string name="favorites_completed">Movie added to favorites</string>
    <string name="favorites_error">Unable to add to favorites</string>
    <string name="genres_format">Genres: %1$s</string>
    <string name="popularity_format">Popularity: %1$s</string>
    <string name="release_date_format">Release Date: %1$s</string>
    <string name="languages_format">Languages: %1$s</string>
    <string name="vote_average_format">Vote Average: %1$s</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="favorites">Favorites</string>
    <string name="toggle_view">Toggle View</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="filter_by_name">Filter by Name</string>
    <string name="error_fetching_data">An error occurred while fetching data. Please try again later</string>
</resources>