<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_most_popular"
        android:title="@string/most_popular"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_now_playing"
        android:title="@string/now_playing"
        android:orderInCategory="200"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:orderInCategory="300"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_toggle_view"
        android:title="@string/toggle_view"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_filter_name"
        android:title="@string/filter_by_name"
        android:orderInCategory="500"
        app:showAsAction="never" />

</menu>